added more styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <h1>Where in the World?</h1>
-            <h3>Light Mode</h3>
+            <h3 id="theme">Light Mode</h3>
         </header>
 
         <main>
@@ -34,8 +34,8 @@
 
                 <div class="country">
                     <img src="https://flagcdn.com/ve.svg" alt="flag">
-                    <h2>Venezuela</h2>
                     <div class="card-details">
+                        <h2>Venezuela</h2>
                         <p>Population: <span>2314</span> </p>
                         <p>Region: <span>2314</span> </p>
                         <p>Capital: <span>2314</span> </p>
