initial page complete

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <main>
             <div class="filters">
-                <div class="searchByCountry">
+                <div class="search-by-country">
                     <input type="text" id="country" placeholder="Search for a country(3 or more character)">
                 </div>
-                <select class="searchByRegion">
+                <select class="search-by-Region">
                     <option value="">Search By Region</option>
                     <option value="africa">Africa</option>
                     <option value ="america">America</option>
@@ -41,6 +41,7 @@
                         <p>Capital: <span>2314</span> </p>
                     </div>
                 </div>
+
 
             </div>
         </main>
