added onpageload logic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="countries">
-
+<!-- 
                 <div class="country">
                     <img src="https://flagcdn.com/ve.svg" alt="flag">
                     <div class="card-details">
@@ -40,7 +40,7 @@
                         <p>Region: <span>2314</span> </p>
                         <p>Capital: <span>2314</span> </p>
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
