--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <main>
             <div class="filters">
                 <div class="search-by-country">
-                    <input type="text" id="country" placeholder="Search for a country(3 or more character)">
+                    <input type="text" id="country-input" placeholder="Search for a country(3 or more character)">
                 </div>
-                <select class="search-by-Region">
+                <select id="search-by-Region">
                     <option value="">Search By Region</option>
                     <option value="africa">Africa</option>
                     <option value ="america">America</option>
