basic functionality is completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="search-by-country">
                     <input type="text" id="country-input" placeholder="Search for a country(3 or more character)">
                 </div>
-                <select id="search-by-Region">
+                <select id="search-by-region">
                     <option value="">Search By Region</option>
                     <option value="africa">Africa</option>
                     <option value ="america">America</option>
