added popup logic

--- a/index.html
+++ b/index.html
@@ -31,20 +31,17 @@
             </div>
 
             <div class="countries">
-<!-- 
-                <div class="country">
-                    <img src="https://flagcdn.com/ve.svg" alt="flag">
-                    <div class="card-details">
-                        <h2>Venezuela</h2>
-                        <p>Population: <span>2314</span> </p>
-                        <p>Region: <span>2314</span> </p>
-                        <p>Capital: <span>2314</span> </p>
-                    </div>
-                </div> -->
-
-
+                <!-- Added through js  -->
             </div>
+            
+            <a href="popup.html" id="back-link">POPUP</a>
+
+
+
         </main>
+
+
+        
 
     </div>
 
