--- a/popup.html
+++ b/popup.html
@@ -24,13 +24,8 @@
         </div>
 
 
-        
-
-
-        
-
     </div>
 
-    <script src="popup.js"></script>
+    <script src="popup.js" type="module"></script>
 </body>
 </html>
